docs: README 구성을 첫 사용자 기준으로 재배치
The old file answered questions in the wrong order. "적용 범위" sat second and
ran 63 lines — Cloud/DC detection, Nori tokenization measurements, analyzer
commit-data semantics — before the reader knew what the tool was for. The
choice between the two editions came at line 98, after most people would have
stopped. And there was no pipeline diagram anywhere, so "how does this work"
had to be inferred from a directory table.

New order: what it does, which edition is yours, how the pieces connect, how
to start, then structure, scope, and a clearly separated contributor section.

The flow diagram is new and is the main addition — sync produces the vault,
build transposes links into ALIASES.md, and both editions read from there.
That the CLI is the only thing that talks to Confluence was stated in prose
before but never shown.

Nothing measured was dropped, only moved. The analyzer material now points at
server/README, which already covers it in more depth; the authentication
troubleshooting is behind a <details> so it stays reachable without blocking
the five-minute path. The one thing genuinely at risk of being lost was the
staged adoption path — run the server alone and watch trajectories accumulate
before deploying it to a team — which existed nowhere else, so it is back
under 시작하기 where it belongs.

Verified rather than assumed: every relative link and path resolves, the
server/README anchor exists, the credential block was run in an empty HOME and
produces 700/600 as claimed, and the stats output matches what the text says
it shows.

341 lines to 309, but the point was the ordering rather than the length.